# Cplusplus-small-projects

./: README.md
AMonstergame/: Main.cpp
LinearAlgeb/: CMakeLists.txt
LinearAlgeb/inc/: Header.h
LinearAlgeb/src/: Source.cpp
Numbers_game/: Main.cpp  Readme.md
Simplified blackjack game/: Readme.md  main.cpp
